# cmake

./: CMakeLists.txt  README.MD
executable/: CMakeLists.txt
executable/src/: main.cpp
scripts/: build.sh  run.sh
